2009-04-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Initial stab at cleaning up temp files.  More work needed.
	* mkimport: Ditto.

2009-04-12  Christopher Faylor  <me+cygwin@cgf.cx>

	* Makefile.in (clean): Clean globals.h.
	(LIBCOS): Depend on globals.h.

2009-04-11  Christopher Faylor  <me+cygwin@cgf.cx>

	* mkimport: New script to perform all operations necessary to create
	libcygwin.a.
	* rmsym: Delete.
	* newsym: Delete.
	* Makefile.in (toolopts): New variable which holds options relating to
	binutils/gcc tools.
	(speclib): Use toolopts.  Add symbols to avoid copying to special
	libraries.
	(OBSOLETE_FUNCTIONS): Delete.
	(NEW_FUNCTIONS): Change to represent an argument to new mkimport
	script.
	(libcygwin.a): Use only new mkimport script to create libcygwin.a.
	Only rely on ${LIBCOS}.
	(*/lib*.a): Simplify speclib dependencies.
	(speclib): Accept toolchain options.  Convert every argument to
	absolute path.  Simplify parsing of nm output.  Accommodate new
	exclude option.

2009-04-11  Dave Korn <dave.korn.cygwin@googlemail.com>

	* include/stdint.h (INTPTR_MIN, INTPTR_MAX):  Add 'L' suffix.
	(WINT_MAX):  Add 'U' suffix.

2009-04-10  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Use a more robust method to derive full file path.

2009-04-09  Christopher Faylor  <me+cygwin@cgf.cx>

	* speclib: Semi-revert to previous version but don't try to generate
	well-formed import library.  Instead, just extract appropriate symbols
	and let later libcygwin.a on link line fill in the rest of the import
	stuff.
	* gendef: Hopefully no-op modification to allow easier post-processing
	on symbol values.

2009-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Use tmp_pathbuf buffer to allocate infobuf
	rather than using the stack.

2009-04-09  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (try_to_bin): Fix alignment of infobuf.

2009-04-09  Corinna Vinschen  <corinna@vinschen.de>
